<resources>
    <string name="app_name">ChatApp</string>
    <string name="app_title">Chat App</string>

    <string name="name_text">Name</string>
    <string name="phone_text">Phone</string>
    <string name="email_text">Email</string>
    <string name="password_text">Password</string>
    <string name="login_text">Login</string>
    <string name="register_text">Register</string>
    <string name="forgot_password_prompt">Forgot Password?</string>
    <string name="already_have_account_prompt">Already Have An Account?</string>
    <string name="do_not_have_an_account_prompt">Don\'t Have An Account Yet?</string>

    <string name="find_friends_text">Find Friends</string>
    <string name="settings_text">Settings</string>
    <string name="logout_text">Logout</string>

    <string name="updated_settings_text">Update Settings</string>

    <string name="select_image_prompt">Tap on the Image to select a New Image</string>
</resources>