<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/std_widget_inset"
    tools:context=".ui.SettingsActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/profile_image_container"
            android:layout_width="@dimen/std_avatar_size"
            android:layout_height="@dimen/std_avatar_size"
            android:src="@drawable/profile_image_placeholder"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:shapeAppearanceOverlay="@style/ShapeAppearance.MaterialComponents.App.RoundedCorners"
            app:strokeColor="@color/lightGray"
            app:strokeWidth="@dimen/xs_widget_inset" />

        <TextView
            android:id="@+id/profile_image_caption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/xs_widget_inset"
            android:text="@string/select_image_prompt"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
            app:layout_constraintEnd_toEndOf="@id/profile_image_container"
            app:layout_constraintStart_toStartOf="@id/profile_image_container"
            app:layout_constraintTop_toBottomOf="@id/profile_image_container" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/name_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/lg_widget_inset"
            app:layout_constraintTop_toBottomOf="@id/profile_image_container"
            app:startIconDrawable="@drawable/ic_baseline_person_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/name_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:hint="@string/name_text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/phone_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/std_widget_inset"
            app:layout_constraintTop_toBottomOf="@id/name_layout"
            app:startIconDrawable="@drawable/ic_baseline_phone_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/phone_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:hint="@string/phone_text" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/status_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/std_widget_inset"
            app:layout_constraintTop_toBottomOf="@id/phone_layout"
            app:startIconDrawable="@drawable/ic_baseline_info_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/status_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:hint="@string/phone_text" />
        </com.google.android.material.textfield.TextInputLayout>


        <ProgressBar
            android:id="@+id/update_setting_progress_bar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/sm_widget_inset"
            android:indeterminateTint="?colorPrimary"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/status_layout" />

        <Button
            android:id="@+id/update_settings_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/btn_widget_inset"
            android:text="@string/updated_settings_text"
            app:layout_constraintTop_toBottomOf="@id/update_setting_progress_bar" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>